manifests/uptime-kuma/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: uptime-kuma-redirect-https
  namespace: uptime-kuma
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime.smeyer.ca`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 80
  tls:
    secretName: wildcard-smeyer-ca-tls 
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma-http
  namespace: uptime-kuma
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`uptime.smeyer.ca`)
      kind: Rule
      middlewares:
        - name: uptime-kuma-redirect-https
      services:
        - name: uptime-kuma
          port: 80
